# IndustryVisionKit

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  QUICK_START.md  build.sh  readme.md  项目简介.md
IndustryVisionGUI/: CMakeLists.txt
IndustryVisionGUI/include/IndustryVisionGUI/: ApplicationWindow.h  DetectionWidget.h  LoginWidget.h
IndustryVisionGUI/src/: ApplicationWindow.cpp  DetectionWidget.cpp  LoginWidget.cpp  main.cpp
IndustryVisionLib/: CMakeLists.txt
IndustryVisionLib/include/IndustryVisionLib/: DetectionTypes.h  InferenceBackend.h  UserManager.h  YoloEngine.h
IndustryVisionLib/src/: BackendLibTorch.cpp  BackendOnnxRuntime.cpp  BackendOpenCV.cpp  BackendOpenVINO.cpp  UserManager.cpp  YoloEngine.cpp
resource/classes/: 6.txt  cable_damage.txt  lion-tiger.txt
