cmake_minimum_required(VERSION 3.21)

project(IndustryVisionKit VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(INDUSTRYVISION_ENABLE_ONNXRUNTIME "Enable ONNX Runtime backend for real YOLO inference" OFF)
set(INDUSTRYVISION_ONNXRUNTIME_ROOT "" CACHE PATH "Path to ONNX Runtime installation root")

option(INDUSTRYVISION_ENABLE_OPENVINO "Enable OpenVINO backend for YOLO inference" OFF)
set(INDUSTRYVISION_OPENVINO_ROOT "" CACHE PATH "Path to OpenVINO installation root")

option(INDUSTRYVISION_ENABLE_LIBTORCH "Enable LibTorch backend for PyTorch YOLO inference" OFF)
set(INDUSTRYVISION_LIBTORCH_ROOT "" CACHE PATH "Path to LibTorch installation root")

find_package(OpenCV REQUIRED COMPONENTS core imgproc imgcodecs video videoio highgui)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

foreach(OUTPUT_CONFIG DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
    string(TOUPPER ${OUTPUT_CONFIG} OUTPUT_CONFIG_UPPER)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUT_CONFIG_UPPER} ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUT_CONFIG_UPPER} ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUT_CONFIG_UPPER} ${CMAKE_SOURCE_DIR}/bin)
endforeach()

add_subdirectory(IndustryVisionLib)
add_subdirectory(IndustryVisionGUI)
